k8s-rabbitmq-ha/deployment.yaml
# AliCloud Plugin for enabling Dynamic Provisioning NAS
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: alicloud-nas-controller-rabbitmq-nas
  namespace: kube-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alicloud-nas-controller
    spec:
      tolerations:
      - effect: NoSchedule
        operator: Exists
        key: node-role.kubernetes.io/master
      - effect: NoSchedule
        operator: Exists
        key: node.cloudprovider.kubernetes.io/uninitialized
      nodeSelector:
         node-role.kubernetes.io/master: ""
      serviceAccount: admin
      containers:
        - name: alicloud-nas-controller-rabbitmq-nas
          image: registry.cn-hangzhou.aliyuncs.com/acs/alicloud-nas-controller:v3.1.0-k8s1.11
          volumeMounts:
          - mountPath: /persistentvolumes
            name: nfs-client-root
      volumes:
        - name: nfs-client-root
          nfs:
            server: xxxxxxxxxx-xxxxx.cn-beijing.nas.aliyuncs.com # @TODO: Please update your mount URL of NAS
            path: /
---
# Deploy SteatfulSet of RabbitMQ
# Pull image from AliCloud Container Registry
# Dynamically provisioning storage
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-ha
  namespace: test-compose
spec:
  selector:
    matchLabels: 
      app: rabbitmq-ha
  serviceName: rabbitmq-ha-discovery
  replicas: 3
  template:
    metadata:
      labels:
        app: rabbitmq-ha
    spec:
      serviceAccountName: rabbitmq
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: registry-qingdao
      containers:
      - name: rabbitmq-ha
        image: registry.cn-qingdao.aliyuncs.com/gen4/rabbitmq-ha
        imagePullPolicy: IfNotPresent
        ports:
          - name: epmd
            protocol: TCP
            containerPort: 4369
          - name: amqp-0-9-1
            protocol: TCP
            containerPort: 5671
          - name: amqp-1-0
            protocol: TCP
            containerPort: 5672
          - name: management-1
            protocol: TCP
            containerPort: 15671
          - name: management-2
            protocol: TCP
            containerPort: 15672
          - name: communication
            protocol: TCP
            containerPort: 25672
        livenessProbe:
          exec:
            command: ["rabbitmqctl", "status"]
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command: ["rabbitmqctl", "status"]
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 10
        volumeMounts:
          - name: config-volume
            mountPath: /etc/rabbitmq
          - name: rabbitmq-experiment-pvc-nas
            mountPath: /var/lib/rabbitmq
        resources:
          limits: 
            cpu: 100m
            memory: 512Mi
          requests:
            memory: 256Mi
      volumes:
        - name: config-volume
          configMap:
            name: rabbitmq-config
            items:
            - key: rabbitmq.conf
              path: rabbitmq.conf
            - key: enabled_plugins
              path: enabled_plugins
            - key: definitions.json
              path: definitions.json
  volumeClaimTemplates:
  - metadata: 
      name: rabbitmq-experiment-pvc-nas
    spec: 
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: alicloud-nas-rabbitmq
      resources: 
        requests: 
          storage: 1Gi
# ---
# Create Discovery Service (for NodePort type)
# kind: Service
# apiVersion: v1
# metadata:
#   namespace: test-compose
#   name: rabbitmq-ha-discovery
#   labels:
#     app: rabbitmq-ha-discovery
#     type: LoadBalancer  
# spec:
#   type: NodePort
#   ports:
#    - name: http
#      protocol: TCP
#      port: 15672
#      targetPort: 15672
#    - name: amqp
#      protocol: TCP
#      port: 5672
#      targetPort: 5672
#      nodePort: 30672
#   selector:
#     app: rabbitmq-ha
# ---
# kind: Service (For ClusterIP type)
# apiVersion: v1
# metadata:
#   namespace: test-compose
#   name: rabbitmq-ha-discovery
#   labels:
#     app: rabbitmq-ha-discovery
#     type: ClusterIP
# spec:
#   type: ClusterIP
#   ports:
#   - name: epmd
#     protocol: TCP
#     port: 4369
#     targetPort: 4369
#   - name: amqp-0-9-1
#     protocol: TCP
#     port: 5671
#     targetPort: 5671
#   - name: amqp-1-0
#     protocol: TCP
#     port: 5672
#     targetPort: 5672
#   - name: communication
#     protocol: TCP
#     port: 25672
#     targetPort: 25672
#   clusterIP: None
#   selector:
#     app: rabbitmq-ha
---
# Create internal loadbalancer
kind: Service
apiVersion: v1
metadata:
  namespace: test-compose
  name: rabbitmq-ha-discovery
  labels:
    app: rabbitmq-ha-discovery
    type: LoadBalancer
  annotations:
    service.beta.kubernetes.io/alicloud-loadbalancer-address-type: intranet
spec:
  type: LoadBalancer
  ports:
  - name: epmd
    protocol: TCP
    port: 4369
    targetPort: 4369
  - name: amqp-0-9-1
    protocol: TCP
    port: 5671
    targetPort: 5671
  - name: amqp-1-0
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: management
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: communication
    protocol: TCP
    port: 25672
    targetPort: 25672
  selector:
    app: rabbitmq-ha
---
# Create external loadbalancer for the management UI
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  namespace: test-compose
  name: rabbitmq-ha-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # @TODO, change hostname prefix and keep the domain from AliCloud (your_rabbitmq_management_ui_name.your_k8s_instance_name.cn-beijing.alicontainer.com)
    # e.g. rabbitmq-portal.cb63acdf806e5464a88157679edf29697.cn-beijing.alicontainer.com
    - host: >-
        your_rabbitmq_management_ui_name.your_k8s_instance_name.cn-beijing.alicontainer.com
      http:
        paths:
          - backend:
              serviceName: rabbitmq-ha-discovery
              servicePort: 15672
            path: /
